# vcs_layer23

./: README.md
contrib/: jenkins.sh
doc/: calypso-gsm-notes.txt  calypso-signals.txt
doc/examples/mobile/: default.cfg  lua_helloworld.lua  lua_ms_on_off.lua  lua_sms_on_attach.lua  lua_sms_receive.lua  lua_timer.lua  multi_ms.cfg
doc/manuals/: Makefile  osmo-gsm-manuals-dir.sh  osmocombb-usermanual-docinfo.xml  osmocombb-usermanual.adoc
doc/manuals/chapters/: scripting.adoc
include/: l1ctl_proto.h
src/: Makefile  README.building  README.development
src/host/layer23/: .gitignore  Makefile.am  README  configure.ac
src/host/layer23/include/: Makefile.am
src/host/layer23/include/osmocom/: Makefile.am
src/host/layer23/src/: Makefile.am
src/host/layer23/src/common/: Makefile.am  base64-dec.c  base64-enc.c  conf.c  database.h  gps.c  hostcheck.c  https-client.c  ini.c  l1ctl.c  l1ctl_lapdm_glue.c  l1l2_interface.c  logging.c  networks.c  openssl_hostname_validation.c  sap_fsm.c  sap_interface.c  sap_proto.c  scan_imm_ass_main.c  scan_sdcch_main.c  scan_tch_main.c  sim.c  sysinfo.c  utils.c
src/host/layer23/src/misc/: Makefile.am  app_bcch_scan.c  app_cbch_sniff.c  app_ccch_scan.c  app_echo_test.c  bcch_scan.c  bcch_scan.h  geo.c  geo.h  gsm0503_coding.c  gsm0503_coding.h  gsm0503_conv.c  gsm0503_conv.h  gsm0503_interleaving.c  gsm0503_interleaving.h  gsm0503_mapping.c  gsm0503_mapping.h  gsm0503_parity.c  gsm0503_parity.h  gsm0503_tables.c  gsm0503_tables.h  gsm48_rr.c  rslms.c  scan_imm_ass.c  scan_sdcch.c  scan_tch.c  xcch.c
src/host/layer23/src/mobile/: Makefile.am  app_mobile.c  gsm322.c  gsm411_sms.c  gsm480_ss.c  gsm48_cc.c  gsm48_mm.c  gsm48_rr.c  main.c  mncc_sock.c  mnccms.c  (+9 more)
src/host/trxcon/: .gitignore  Makefile.am  configure.ac  l1ctl.c  l1ctl.h  l1ctl_link.c  l1ctl_link.h  logging.c  logging.h  sched_clck.c  sched_lchan_common.c  sched_lchan_desc.c  sched_lchan_pdtch.c  sched_lchan_rach.c  sched_lchan_sch.c  sched_lchan_sniff.c  sched_lchan_tchf.c  sched_lchan_tchh.c  sched_lchan_xcch.c  sched_mframe.c  sched_prim.c  sched_trx.c  sched_trx.h  scheduler.h  trx_if.c  trx_if.h  trxcon.c  trxcon.h
(+43 files in other folders)
